fix: List.of -> Arrays.asList 변경